feat: update package version to 0.0.3 and set author

--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "rbq-dev",
-  "private": true,
-  "type": "module",
-  "version": "0.0.0",
+  "version": "0.0.3",
+  "author": "Akari Network",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
