feat: add module type to package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "rbq-dev",
   "version": "0.0.3",
+  "type": "module",
   "author": "Akari Network",
   "scripts": {
     "dev": "vite",
